Fix issue with actor list. Fix issue with close button z-index and touch area.

--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
@@ -142,5 +142,7 @@ mat-form-field.search-movie {
   font-size: 10px;
   color: white;
   text-shadow: 0px 0px 6px #0000009c;
-  z-index: 1;
+  z-index: 10;
+  padding: 0 15px 10px 20px;
+  right: 15px;
 }
